# Animation_Task

./: AnimationTask.pro  CMakeLists.txt  README.md  animateditem.cpp  animateditem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ownbutton.cpp  ownbutton.h
src/: animated_button.hpp  easing_function.hpp
src/mainwindow/: mainwindow.hpp  mainwindow.ui
